--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://xujamov.github.io",
-  "name": "xujamov.github.io",
+  "homepage": "https://khujamov.github.io",
+  "name": "khujamov.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
